--- a/css/style.css
+++ b/css/style.css
@@ -2,14 +2,17 @@ body{
 	margin:0;
 	padding: 0;
 	font-family: sans-serif;
+	background-image: url('https://cdn.pixabay.com/photo/2017/07/31/11/21/people-2557396_1280.jpg');
+	background-repeat:no-repeat;
+	background-size:100%;
 }
+
 *{
 	box-sizing: border-box;
 	outline: none!important;
 }
 
 .login-page{
-	background-image: url('../img/4kft.jpg');
 	background-size: cover;
 	height: 100vh;
 	position: relative;
