--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,16 @@ nav{
 	transition:box-shadow .5s ease;
 }
 
+.login-page .box .form-body textarea{
+	margin-bottom: 20px;
+	border:1px solid #ffffff;
+	background-color: transparent;
+	border-radius: 20px;
+	text-align: center;
+	color:#ffffff;
+	transition:box-shadow .5s ease;
+}
+
 .login-page .box .form-body input:focus{
 	box-shadow: 0px 0px 10px black;
 }
